<resources>
    <string name="app_name">Exe3</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Verifypassword">Verify password</string>
    <string name="lastMessage">Hello</string>
    <string name="login_btn">Login</string>
    <string name="pic_btn">Choose a picture</string>
    <string name="lol">LOL</string>
    <string name="displayname">Display Name</string>
    <string name="User">User</string>
    <string name="friend">friend</string>
    <string name="register">Register</string>
    <string name="chats">Chat</string>
    <string name="title_activity_register">Register</string>
    <string name="btn_click_to_register_or_login">click here</string>
    <string name="not_registered">Not registered?</string>
    <string name="to_register">to register</string>
    <string name="date">18:45</string>
    <string name="image_description_user">profilePicUser</string>
    <string name="logout_button">logout</string>
    <string name="placholder">Type your message...</string>
    <string name="todo">TODO</string>
    <string name="setting">settings</string>
    <string name="Edit_URL">Edit URL</string>
    <string name="current_URL">current URL</string>
    <string name="save">save</string>
    <string name="Theme">Theme</string>
    <string name="color1">red</string>
    <string name="color2">green</string>
    <string name="color3">blue</string>
    <string name="color4">purple</string>
    <string name="color5">orange</string>
    <string name="color6">default</string>
    <string name="message_content">Message content</string>
    <string name="time_of_message">Time of Message</string>
    <string name="registered">Registered?</string>
    <string name="to_login">to login</string>
</resources>