<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray2"

    >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="157dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="300dp"
        android:text="@string/setting"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="188dp"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Edit_URL"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="202dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        tools:layout_editor_absoluteX="317dp"
        tools:layout_editor_absoluteY="187dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="300dp"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color1"
        android:background="@color/dark_red"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="372dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:background="@color/dark_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color2"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="374dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:background="@color/dark_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color3"
        tools:layout_editor_absoluteX="291dp"
        tools:layout_editor_absoluteY="374dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button7"
        android:background="@color/purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color4"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="446dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button8"
        android:background="@color/dark_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color5"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="450dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color6"
        tools:layout_editor_absoluteX="291dp"
        tools:layout_editor_absoluteY="448dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Theme"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="274dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_URL"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="202dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>