<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/peakpx"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/boxUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_background"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/returnToListFriend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            app:srcCompat="@drawable/baseline_arrow_back_ios_24"
            android:contentDescription="@string/todo" />

        <FrameLayout
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/circular_background">

            <ImageView
                android:id="@+id/profileUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/favicon"
                android:contentDescription="@string/todo" />

        </FrameLayout>

        <TextView
            android:id="@+id/user_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:text="@string/username"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry"
            />
    </LinearLayout>


    <ListView
        android:id="@+id/messagesList"
        android:layout_marginTop="28pt"
        android:layout_marginBottom="17pt"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:divider="@drawable/divider"
        android:dividerHeight="7dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        app:layout_constraintBottom_toTopOf="@id/inputBox"
        app:layout_constraintTop_toBottomOf="@+id/boxUser"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:listitem="@layout/message_style" />

    <LinearLayout
        android:id="@+id/inputBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxUser"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-2dp">
        <EditText
            android:id="@+id/chatInputEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/placholder"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <ImageView
            android:id="@+id/addMessage"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/the_send_btn_background"
            android:contentDescription="@string/todo"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            app:srcCompat="@drawable/round_send_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
